--- a/package.json
+++ b/package.json
@@ -229,6 +229,8 @@
     "spectacle": "4.0.5",
     "style-loader": "^0.20.1",
     "svg-react-loader": "^0.4.5",
+    "turndown": "^4.0.1",
+    "turndown-plugin-gfm": "^1.0.1",
     "uglify-es": "3.3.9",
     "uniq": "^1.0.1",
     "utf-8-validate": "^4.0.0",
