--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "redux-logger": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
-    "webpack-dev-middleware": "^2.0.4",
+    "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
@@ -200,7 +200,7 @@
     "react-color": "^2.2.7",
     "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
-    "react-dates": "16.3.5",
+    "react-dates": "16.3.6",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "16.2.0",
@@ -217,7 +217,7 @@
     "react-router": "4.2.0",
     "react-router-dom": "^4.1.1",
     "react-select": "^1.2.1",
-    "react-slick": "^0.19.0",
+    "react-slick": "0.19.0",
     "react-split-pane": "0.1.77",
     "react-table": "^6.7.6",
     "react-tools": "^0.13.3",
