--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test-watch": "npm test -- --watch",
     "lint": "eslint app test *.js",
     "hot-server": "node -r babel-register server.js",
-    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
+    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --profile --colors",
+    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./",
     "start-hot": "cross-env HOT=1 NODE_ENV=development DEBUG=isle-editor electron -r babel-register ./main.development",
@@ -110,6 +110,7 @@
     "redux-logger": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.10.0"
   },
@@ -160,7 +161,6 @@
     "element-resize-event": "^2.0.5",
     "enzyme-adapter-react-16": "^1.1.1",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "extract-text-webpack-plugin": "3.0.2",
     "fbjs-scripts": "^0.8.0",
     "file-loader": "^1.1.5",
     "file-saver": "^1.3.3",
@@ -209,6 +209,7 @@
     "react-highlight-words": "^0.11.0",
     "react-input-range": "^1.2.1",
     "react-list": "^0.8.8",
+    "react-loadable": "^5.3.1",
     "react-notification-system": "^0.2.7",
     "react-player": "^1.0.0",
     "react-plotly.js": "^1.2.0",
@@ -240,9 +241,9 @@
     "utf-8-validate": "^4.0.0",
     "venn.js": "0.2.20",
     "victory": "0.25.6",
-    "webpack": "3.11.0"
+    "webpack": "4.0.1"
   },
   "devEngines": {
-    "node": "5.x || 6.x || 7.x || 8.x || 9.x"
+    "node": "6.x || 7.x || 8.x || 9.x"
   }
 }
