--- a/package.json
+++ b/package.json
@@ -14,22 +14,20 @@
     "ftest": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 tape -r babel-register test/setup.js test/**/${TEST:-*}.spec.js | tap-spec",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 tape -r babel-register test/setup.js test/**/*.spec.js | tap-spec",
     "test-cov": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 istanbul cover --dir ./reports/coverage --report lcov tape -- -r babel-register test/setup.js test/**/*.spec.js",
-    "test-watch": "npm test -- --watch",
     "lint": "eslint app test *.js",
-    "hot-server": "node -r babel-register server.js",
     "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r babel-register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./",
-    "start-hot": "cross-env HOT=1 NODE_ENV=development DEBUG=isle-editor electron -r babel-register ./main.development",
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
-    "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && npm run build",
     "init-docs": "gitbook install",
     "publish-docs": "gitbook build && echo isledocs.com > _book/CNAME && gh-pages --dist _book",
     "view-cov": "xdg-open ./reports/coverage/lcov-report/index.html",
     "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
-    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
+    "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
+    "start-renderer-dev": "cross-env START_HOT=1 NODE_ENV=development node --max-old-space-size=4096 --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config=webpack.config.development.js",
+    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./main.development.js"
   },
   "repository": {
     "type": "git",
@@ -103,6 +101,7 @@
     "jsdom": "^11.6.2",
     "modclean": "^2.0.0",
     "null-loader": "^0.1.1",
+    "react-hot-loader": "^4.0.0",
     "react-test-renderer": "16.2.0",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.3",
@@ -111,8 +110,7 @@
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
     "webpack-cli": "^2.0.11",
-    "webpack-dev-middleware": "^3.0.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
     "@planeshifter/brace": "^0.8.0",
@@ -161,7 +159,6 @@
     "element-resize-event": "^2.0.5",
     "enzyme-adapter-react-16": "^1.1.1",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "fbjs-scripts": "^0.8.0",
     "file-loader": "^1.1.5",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
