--- a/package.json
+++ b/package.json
@@ -162,7 +162,6 @@
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "file-loader": "^1.1.5",
     "file-saver": "^1.3.3",
-    "font-awesome": "^4.7.0",
     "form-data": "^2.2.0",
     "fs-extra": "^5.0.0",
     "gitbook-plugin-edit-link": "^2.0.2",
@@ -186,6 +185,7 @@
     "moment": "2.21.0",
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^8.0.0",
+    "pdfmake": "^0.1.36",
     "plotly.js": "^1.35.2",
     "profanities": "^2.5.0",
     "prop-types": "^15.5.10",
