--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.2",
-    "bl": "^1.2.0",
+    "bl": "^1.2.2",
     "bufferutil": "^3.0.1",
     "camelcase": "^4.1.0",
     "component-playground": "^3.1.1",
@@ -161,7 +161,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "file-loader": "^1.1.5",
-    "file-saver": "^1.3.4",
+    "file-saver": "1.3.3",
     "form-data": "^2.2.0",
     "fs-extra": "^5.0.0",
     "gitbook-plugin-edit-link": "^2.0.2",
@@ -211,7 +211,7 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^1.3.0",
     "react-plotly.js": "^2.1.0",
-    "react-portal": "^4.1.2",
+    "react-portal": "^4.1.4",
     "react-redux": "^5.0.1",
     "react-router": "4.2.0",
     "react-router-dom": "^4.1.1",
