--- a/package.json
+++ b/package.json
@@ -221,7 +221,7 @@
     "react-table": "^6.8.2",
     "react-tools": "^0.13.3",
     "recordrtc": "^5.4.1",
-    "redux": "^3.4.0",
+    "redux": "3.7.2",
     "redux-thunk": "^2.0.1",
     "request": "2.85.0",
     "ripemd160": "^2.0.2",
