--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.11.0",
     "react-input-range": "^1.2.1",
+    "react-joyride": "^2.0.0-11",
     "react-list": "^0.8.8",
     "react-loadable": "^5.4.0",
     "react-notification-system": "^0.2.7",
