--- a/package.json
+++ b/package.json
@@ -204,6 +204,7 @@
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.0",
     "react-dom": "16.4.1",
+    "react-floater": "^0.5.4",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.11.0",
     "react-input-range": "^1.2.1",
